--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~10.0.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
+    "ng2-animate-on-scroll": "^2.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
