--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "andresjosehr-angular",
+  "name": "andresjosehr-portfolio",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@angular/service-worker": "~10.0.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "aos": "^2.3.4",
