Design bugs fixed

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.webmanifest"
+              "src/manifest.webmanifest",
+              "src/.htaccess"
             ],
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
