--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
     "ng2-animate-on-scroll": "^2.0.0",
+    "ngx-google-analytics": "^11.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
