--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-  "name": "andresjosehr-portfolio",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "build-portfolio": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~10.0.4",
-    "@angular/common": "~10.0.4",
-    "@angular/compiler": "~10.0.4",
-    "@angular/core": "~10.0.4",
-    "@angular/forms": "~10.0.4",
-    "@angular/localize": "~10.0.4",
-    "@angular/platform-browser": "~10.0.4",
-    "@angular/platform-browser-dynamic": "~10.0.4",
-    "@angular/router": "~10.0.4",
-    "@angular/service-worker": "~10.0.4",
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "aos": "^2.3.4",
-    "bootstrap": "^4.5.0",
-    "ng2-animate-on-scroll": "^2.0.0",
-    "ngx-google-analytics": "^11.2.0",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.3",
-    "@angular/cli": "~10.0.3",
-    "@angular/compiler-cli": "~10.0.4",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
-  }
+    "name": "andresjosehr-portfolio",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "build-portfolio": "ng build --prod",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~10.0.4",
+        "@angular/common": "~10.0.4",
+        "@angular/compiler": "~10.0.4",
+        "@angular/core": "~10.0.4",
+        "@angular/forms": "~10.0.4",
+        "@angular/localize": "~10.0.4",
+        "@angular/platform-browser": "~10.0.4",
+        "@angular/platform-browser-dynamic": "~10.0.4",
+        "@angular/router": "~10.0.4",
+        "@angular/service-worker": "~10.0.4",
+        "@fortawesome/fontawesome-free": "^5.14.0",
+        "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+        "@ngx-translate/core": "^13.0.0",
+        "@ngx-translate/http-loader": "^6.0.0",
+        "aos": "^2.3.4",
+        "bootstrap": "^4.5.0",
+        "ng2-animate-on-scroll": "^2.0.0",
+        "ngx-google-analytics": "^11.2.0",
+        "rxjs": "~6.5.5",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.10.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1000.3",
+        "@angular/cli": "~10.0.3",
+        "@angular/compiler-cli": "~10.0.4",
+        "@types/node": "^12.11.1",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "codelyzer": "^6.0.0",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~5.0.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~3.3.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~3.9.5"
+    }
 }
