Many changes made

--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,8 @@
                             "node_modules/@fortawesome/fontawesome-free/css/all.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "node_modules/aos/dist/aos.css",
+                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
                             "src/styles.scss",
                             "src/fonts.scss"
                         ],
