Changes made in job

--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
             "sourceRoot": "src",
             "prefix": "app",
             "i18n": {
-                "sourceLocale": "he-IL",
+                "sourceLocale": "es",
                 "locales": {
                     "en-US": "src/locale/messages.en.xlf"
                 }
