--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
-    "ng2-animate-on-scroll": "^2.0.0",
+    "ng2-animate-on-scroll": "2.3.2",
     "ngx-google-analytics": "^11.2.0",
     "ngx-owl-carousel-o": "^6.0.0",
     "rxjs": "~6.5.5",
