--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,9 @@
 <IfModule mod_rewrite.c>
-	RewriteEngine On
+  RewriteEngine on
+  RewriteCond %{REQUEST_FILENAME} -s [OR]
+  RewriteCond %{REQUEST_FILENAME} -l [OR]
+  RewriteCond %{REQUEST_FILENAME} -d
+  RewriteRule ^.*$ - [NC,L]
 
-	RewriteCond %{HTTPS} !=on
-	RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
-	Header always set Content-Security-Policy "upgrade-insecure-requests;"
-
- 	# -- REDIRECTION to https (optional):
-	# If you need this, uncomment the next two commands
-	# RewriteCond %{HTTPS} !on
-  	# RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L]
-	# --
-
-	RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
-	RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
-
-	RewriteRule ^.*$ - [NC,L]
-	RewriteRule ^(.*) index.html [NC,L]
+  RewriteRule ^(.*) /index.html [NC,L]
 </IfModule>
