--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@angular/router": "^14.3.0",
     "@angular/service-worker": "^14.3.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
     "ngx-google-analytics": "^11.2.0",
-    "ngx-owl-carousel-o": "^7.0.0",
+    "ngx-owl-carousel-o": "^8.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
