--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@angular/router": "^17.3.9",
     "@angular/service-worker": "^17.3.9",
     "@fortawesome/fontawesome-free": "^5.14.0",
-    "@ngx-translate/core": "^13.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
     "ngx-google-analytics": "^11.2.0",
+    "ngx-owl-carousel-o": "^17.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.14.6"
