--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
                         },
                         "index": "src/index.html",
                         "polyfills": [
-                          "src/polyfills.ts"
+                          "@angular/localize/init","zone.js"
                         ],
                         "tsConfig": "tsconfig.app.json",
                         "assets": [
