--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@angular/router": "^19.2.3",
     "@angular/service-worker": "^19.2.3",
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ngx-translate/core": "^16.0.0",
     "@ngx-translate/http-loader": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
-    "ngx-owl-carousel-o": "^18.0.0",
+    "mailtrap": "^4.0.0",
+    "ngx-owl-carousel-o": "^19.0.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.15.0"
@@ -39,6 +40,7 @@
     "@angular/cli": "^19.2.4",
     "@angular/compiler-cli": "^19.2.3",
     "@types/node": "^22.13.10",
+    "@types/nodemailer": "^6.4.17",
     "codelyzer": "^6.0.0",
     "karma": "~6.3.16",
     "karma-chrome-launcher": "~3.1.0",
