--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,10 @@
                         "sourceMap": true,
                         "optimization": false,
                         "namedChunks": true,
-                        "browser": "src/main.ts"
+                        "browser": "src/main.ts",
+                        "allowedCommonJsDependencies": [
+                          "aos"
+                        ]
                     },
                     "configurations": {
                         "production": {
