--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "build-portfolio": "ng build --configuration production",
+    "build:prod": "ng build --configuration production --base-href https://andresjosehr.com/",
+    "deploy": "npm run build:prod && ngh --dir=dist/andresjosehr-portfolio --cname=andresjosehr.com",
+    "deploy:ci": "ngh --dir=dist/andresjosehr-portfolio --cname=andresjosehr.com --no-silent",
+    "predeploy": "npm run build:prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -40,6 +44,7 @@
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.9",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^2.0.3",
     "codelyzer": "^6.0.0",
     "karma": "~6.3.16",
     "karma-chrome-launcher": "~3.1.0",
