--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
+    "lenis": "^1.3.4",
     "ngx-google-analytics": "^11.2.0",
     "ngx-owl-carousel-o": "^17.0.0",
     "rxjs": "~6.5.5",
