Actualización a Angular 19 completada

--- a/angular.json
+++ b/angular.json
@@ -17,12 +17,15 @@
             },
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
+                    "builder": "@angular-devkit/build-angular:application",
                     "options": {
-                        "outputPath": "dist/andresjosehr-portfolio",
+                        "outputPath": {
+                          "base": "dist/andresjosehr-portfolio"
+                        },
                         "index": "src/index.html",
-                        "main": "src/main.ts",
-                        "polyfills": "src/polyfills.ts",
+                        "polyfills": [
+                          "src/polyfills.ts"
+                        ],
                         "tsConfig": "tsconfig.app.json",
                         "assets": [
                             "src/favicon.ico",
@@ -40,12 +43,11 @@
                             "src/fonts.scss"
                         ],
                         "scripts": [],
-                        "vendorChunk": true,
                         "extractLicenses": false,
-                        "buildOptimizer": false,
                         "sourceMap": true,
                         "optimization": false,
-                        "namedChunks": true
+                        "namedChunks": true,
+                        "browser": "src/main.ts"
                     },
                     "configurations": {
                         "production": {
@@ -60,8 +62,6 @@
                             "sourceMap": false,
                             "namedChunks": false,
                             "extractLicenses": true,
-                            "vendorChunk": false,
-                            "buildOptimizer": true,
                             "budgets": [
                                 {
                                     "type": "initial",
@@ -74,8 +74,7 @@
                                     "maximumError": "10kb"
                                 }
                             ],
-                            "serviceWorker": true,
-                            "ngswConfigPath": "ngsw-config.json"
+                            "serviceWorker": "ngsw-config.json"
                         }
                     },
                     "defaultConfiguration": ""
