Comando deploy actualizado

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "ng build",
     "build-portfolio": "ng build --configuration production",
     "build:prod": "ng build --configuration production --base-href https://andresjosehr.com/",
-    "deploy": "npm run build:prod && ngh --dir=dist/andresjosehr-portfolio --cname=andresjosehr.com",
-    "deploy:ci": "ngh --dir=dist/andresjosehr-portfolio --cname=andresjosehr.com --no-silent",
+    "postbuild:prod": "cp .nojekyll dist/andresjosehr-portfolio/browser/ && cp CNAME dist/andresjosehr-portfolio/browser/",
+    "deploy": "npm run build:prod && npm run postbuild:prod && ngh --dir=dist/andresjosehr-portfolio/browser --cname=andresjosehr.com",
+    "deploy:ci": "npm run postbuild:prod && ngh --dir=dist/andresjosehr-portfolio/browser --cname=andresjosehr.com --no-silent",
     "predeploy": "npm run build:prod",
     "test": "ng test",
     "lint": "ng lint",
